delete unused props, modify sass to better view

--- a/frontend/src/components/Menu/Menu.module.sass
+++ b/frontend/src/components/Menu/Menu.module.sass
@@ -3,8 +3,9 @@
     width: 400px
     right: -10px
     top: 100%
-    background-color: #EEEFF1
+    background-color: #babbbd
     text-align: center
+    z-index: 10
 .menuHeader
     display: flex
     justify-content: space-between
