--- a/frontend/src/components/RenameListForm/RenameListForm.module.sass
+++ b/frontend/src/components/RenameListForm/RenameListForm.module.sass
@@ -19,14 +19,12 @@
     margin-bottom: 10px
 .fieldWarning
     position: absolute
-    top: 30px
-    left: 10px
+    left: 100px
     right: 10px
     font-size: 15px
     display: flex
     justify-content: center
-    color: white
-    border: 1px solid #b72522
+    color: red
     padding-bottom: 5px
     padding-top: 5px
     
