--- a/frontend/src/pages/BoardPage/BoardPage.module.sass
+++ b/frontend/src/pages/BoardPage/BoardPage.module.sass
@@ -10,6 +10,9 @@
     display: flex
     align-items: center
     justify-content: space-between
+    position: relative
+.menuContainer
+    cursor: pointer
 .dots
     margin-right: 5px
     vertical-align: text-top
