--- a/frontend/src/pages/BoardPage/BoardPage.module.sass
+++ b/frontend/src/pages/BoardPage/BoardPage.module.sass
@@ -20,7 +20,22 @@
     text-decoration: underline 
 .listsContainer
     display: flex
-    align-items: center
-    flex-wrap: wrap
+    flex-wrap: nowrap
     margin-top: 10px
+    overflow: auto
+    height: calc(100% - 35px)
+    &::-webkit-scrollbar 
+        height: 20px
+    &::-webkit-scrollbar-track 
+        background: #f1f1f1 
+        box-shadow: inset 0 0 5px grey 
+        border-radius: 10px 
+    &::-webkit-scrollbar-thumb 
+        background: #888
+        border-radius: 10px 
+    &::-webkit-scrollbar-thumb:hover 
+        background: #555 
+
+    
+
 
