add listReducer function createList and DeleteList

--- a/frontend/src/components/CardsList/CardsList.module.sass
+++ b/frontend/src/components/CardsList/CardsList.module.sass
@@ -1,13 +1,27 @@
 .listContainer
     margin-right: 10px
-    margin-bottom: 10px
+    margin-bottom: auto
     padding: 10px
     border-radius: 5px
+    min-width: 290px
     background-color: #E3E4E6
     width: 300px
     color:#313234
+.titleContainer
+    position: relative
+    display: flex
+    justify-content: space-between
 .listTitle
     margin-bottom: 10px
+.listMenu
+    display: inline-block
+    height: 5px
+    width: 5px
+    margin-bottom: 5px
+    border-radius: 50%
+    background-color: #A0A1A3
+.listMenu + .listMenu
+    margin-left: 1px
 .card
     margin-bottom: 5px
     padding: 5px
