--- a/frontend/src/components/RenameListForm/RenameListForm.module.sass
+++ b/frontend/src/components/RenameListForm/RenameListForm.module.sass
@@ -32,6 +32,7 @@
     height: 20px
     margin: 0px 10px 0px 10px
     font-size: 16px
+    height: 24px
     background-color:#61A945
     color: #ffffff
     border: 0
