add listRename function, correct some mistakes, add check rights to rename board

--- a/frontend/src/components/BoardMenu/BoardMenu.module.sass
+++ b/frontend/src/components/BoardMenu/BoardMenu.module.sass
@@ -6,6 +6,7 @@
     background-color: #EEEFF1
     text-align: center
     color: #454746
+    z-index: 10
 .menuHeader
     display: flex
     justify-content: space-between
