--- a/frontend/src/components/CardsList/CardsList.module.sass
+++ b/frontend/src/components/CardsList/CardsList.module.sass
@@ -31,7 +31,14 @@
     color:#838383
     font-size: 14px
     font-weight: 400
+    cursor: pointer
 .btnAddCard
+    margin-top: 10px
+    background-color: #E3E4E6
+    color:#929699
+    border: 0
+    font-size: 14px
+.btnSaveCard
     background-color: #56AF3F
     color: #FFFFFF
     border: 0
