create Activity component, change CardWindow and BoardMenu to show activity through Activity component

--- a/frontend/src/components/BoardMenu/BoardMenu.module.sass
+++ b/frontend/src/components/BoardMenu/BoardMenu.module.sass
@@ -63,8 +63,7 @@
 .action
     color: #5E5F61
 .card
-    &:visited
-       color: #5E5F61   
+    text-decoration: underline   
 .time
     margin-top: 5px
     font-size: 10px  
