implemented Adding comments

--- a/frontend/src/components/CardWindow/CardWindow.module.sass
+++ b/frontend/src/components/CardWindow/CardWindow.module.sass
@@ -81,6 +81,7 @@
 .commentContainer
     margin-left: -40px
     margin-top: 10px
+    margin-bottom: 10px
     display: flex
     align-items: flex-start
 .badge
@@ -93,23 +94,6 @@
     line-height: 40px
     text-align: center
     background-color: #D7D8DF
-.commentField
-    background-color: white    
-    height: 80px
-    flex-grow: 2
-    border-radius: 4px
-    box-shadow: 0px 5px 5px 0px rgba(50, 50, 50, 0.2)
-    padding: 10px
-    font-size: 16px
-    font-weight: 600
-    color: #95999C
-.btnSaveComment
-    margin-top: 15px
-    padding: 10px 25px
-    border: 0
-    background-color: #F8FAF9
-    color: #B3B7B8
-    border-radius: 4px
 .activityPanel
     display: flex
     justify-content: space-between
