--- a/frontend/src/components/Activity/Activity.module.sass
+++ b/frontend/src/components/Activity/Activity.module.sass
@@ -25,3 +25,10 @@
     margin-top: 5px
     font-size: 10px  
     color: #989DA0
+.commentContainer
+    background-color: #FFFFFF
+    padding: 5px
+    border-radius: 4px
+    border: 1px solid  #a4a6aa
+    width: fit-content
+    margin-top: 10px
