prettier view CardsList and CreateListForm, add keys to Activity span, modify style Menu and ListMenu

--- a/frontend/src/components/Menu/Menu.module.sass
+++ b/frontend/src/components/Menu/Menu.module.sass
@@ -17,6 +17,7 @@
     width: 50px
     margin-right: 10px
     color: #9A9B9D
+    cursor: pointer
 .menuItem
     text-align: left
     padding: 10px
