add Drag-and-Drop fuctionality, add cascade delete cards on delete list

--- a/frontend/src/components/CardsList/CardsList.module.sass
+++ b/frontend/src/components/CardsList/CardsList.module.sass
@@ -31,7 +31,14 @@
     color:#838383
     font-size: 14px
     font-weight: 400
-    cursor: pointer
+    rotate: 45deg
+.drag
+    transform: rotate(2deg)
+    margin-bottom: 10px
+.placeholder
+    background-color:#C4C9CC
+    border-radius: 5px
+    margin-top: 10px
 .btnAddCard
     margin-top: 10px
     background-color: #E3E4E6
@@ -44,3 +51,5 @@
     border: 0
     border-radius: 5px
     height: 30px
+.droppable
+    position: relative
