add TryAgain component to reload data, make prettier view BoardMenu and userReducer.js

--- a/frontend/src/components/BoardMenu/BoardMenu.module.sass
+++ b/frontend/src/components/BoardMenu/BoardMenu.module.sass
@@ -1,12 +1,14 @@
 .mainContainer
     position: absolute
     width: 300px
+    height: 700px
     right: -10px
     top: calc(100% + 10px)
     background-color: #EEEFF1
     text-align: center
     color: #454746
     z-index: 10
+    overflow: auto
 .menuHeader
     display: flex
     justify-content: space-between
