prettier view LogiPage and RegistrationPage, modify LogOut in Menu

--- a/frontend/src/components/Menu/Menu.module.sass
+++ b/frontend/src/components/Menu/Menu.module.sass
@@ -19,7 +19,12 @@
     color: #9A9B9D
     cursor: pointer
 .menuItem
+    display: inline-block
     text-align: left
     padding: 10px
     padding-left: 60px
-    cursor: pointer
+    color: #504F4C
+    text-decoration: none
+    & :visited
+        color: #504F4C
+
