create ERROR_CONSTANT to localisation error messages, modify RequireAuth from class to function, beautify RenameListForm and RenameBoardForm

--- a/frontend/src/components/RenameListForm/RenameListForm.module.sass
+++ b/frontend/src/components/RenameListForm/RenameListForm.module.sass
@@ -19,16 +19,19 @@
     margin-bottom: 10px
 .fieldWarning
     position: absolute
+    top: -12px
     left: 100px
     right: 10px
-    font-size: 15px
+    font-size: 12px
+    font-weight: 400
     display: flex
     justify-content: center
     color: red
-    padding-bottom: 5px
-    padding-top: 5px
+    padding-bottom: 2px
+    padding-top: 2px
+    z-index: 5
     
-.btnRenameBoard
+.btnRenameList
     height: 20px
     margin: 0px 10px 0px 10px
     font-size: 16px
