add Spinner on load make view prettier

--- a/frontend/src/components/RenameBoardForm/RenameBoardForm.module.sass
+++ b/frontend/src/components/RenameBoardForm/RenameBoardForm.module.sass
@@ -20,6 +20,7 @@
     margin-right: 80px
 .fieldWarning
     position: absolute
+    height: 40px
     top: -10px
     left: 120px
     right: 10px
@@ -27,6 +28,7 @@
     font-weight: 400
     display: flex
     justify-content: center
+    align-items: center
     color: red
     padding-bottom: 2px
     padding-top: 2px
