--- a/frontend/src/components/CreateBoardForm/CreateBoardForm.module.sass
+++ b/frontend/src/components/CreateBoardForm/CreateBoardForm.module.sass
@@ -47,3 +47,15 @@
 .submitBtn
   font-size: 22px
   color: white
+.fieldWarning
+  position: absolute
+  border: 1px solid #b72522
+  left: 10px
+  right: 10px
+  top: -25px
+  font-size: 15px
+  display: flex
+  justify-content: center
+  color: #b72522
+  padding: 5px
+  padding-top: 5px
