--- a/frontend/src/components/Spinner/Spinner.module.sass
+++ b/frontend/src/components/Spinner/Spinner.module.sass
@@ -1,6 +1,8 @@
 .loaderContainer
   display: flex
   justify-content: center
-  width: 200px
+  width: fill
   margin: 0 auto
   align-self: center
+  position: absolute
+  z-index: 101
