--- a/frontend/src/components/CreateCommentForm/CreateCommentForm.module.sass
+++ b/frontend/src/components/CreateCommentForm/CreateCommentForm.module.sass
@@ -44,7 +44,8 @@
     margin-top: 15px
     padding: 10px 25px
     border: 0
-    background-color: #F8FAF9
-    color: #B3B7B8
+    background-color: #a5bdb1
+    box-shadow: 0px 5px 5px 0px rgba(50, 50, 50, 0.2)
+    color: #4c4e4e
     border-radius: 4px
 
